Update Projeto Pizza

--- a/JavaScript/L7E06/index.html
+++ b/JavaScript/L7E06/index.html
@@ -236,7 +236,7 @@
 
                         if (media >= 7) {
 
-                            let tr = tabelaResultados.insertRow()
+                            let td = tabelaResultados.insertRow()
                             let tdNome = tr.insertCell()
                             let tdEnd = tr.insertCell()
                             let tdNomePai = tr.insertCell()
